--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,10 @@
 
 @layer base {
   :root {
+    --evento-pink: #d5298e;
+    --evento-purple: #a14cb9;
+    --evento-blue: #5f6fed;
+    --evento-gradient-button: linear-gradient(180deg, #894dbc 0%, #5f6fed 100%);
     --evento-gradient: linear-gradient(180deg, #d5298e 0%, #5f6fed 100%);
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -33,6 +37,7 @@
   }
 
   .dark {
+    --evento-gradient-button: linear-gradient(180deg, #d5298e 0%, #5f6fed 100%);
     --evento-gradient: linear-gradient(180deg, #d5298e 0%, #5f6fed 100%);
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
