feat: add complete event action private in event id page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,4 +84,20 @@
   h4 {
     @apply font-bold;
   }
+  .portrait {
+    height: 75vh; /* or any other appropriate height */
+    width: auto;
+  }
+
+  .landscape {
+    width: 100%;
+    height: auto;
+  }
+
+  @media (min-width: 1024px) {
+    /* for larger screens */
+    .portrait {
+      height: 60vh; /* Adjust height as needed */
+    }
+  }
 }
