--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  h1 {
+    @apply text-4xl sm:text-5xl lg:text-8xl font-bold text-eventoPurpleDark flex flex-wrap;
+  }
   h2 {
     @apply text-2xl font-bold;
   }
