fix: new test input chat in ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,3 +130,10 @@
     }
   }
 }
+@supports (-webkit-touch-callout: none) {
+  html,
+  body {
+    height: 100%;
+    height: -webkit-fill-available;
+  }
+}
