--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -133,7 +133,7 @@
 @supports (-webkit-touch-callout: none) {
   html,
   body {
-    height: 100%;
     height: -webkit-fill-available;
+    min-height: -webkit-fill-available;
   }
 }
